Fix CRASH_WITH_INFO() so that it doesn't complain about unused parameters on non Clang / MSVC compilers. https://bugs.webkit.org/show_bug.cgi?id=200243

Reviewed by Mark Lam.

For GCC, we'll implement WTFCrashWithInfo as a function rather than a macro. To use
##__VA_ARGS we would need to enable GNU extensions, and don't want to do that. The proper
solution, format __VA_OPT__(,) __VA_ARGS__, requires C++20. So just use an inline function
for now as a workaround.

* wtf/Assertions.h:
(CRASH_WITH_INFO):
(CRASH_WITH_SECURITY_IMPLICATION_AND_INFO):

Canonical link: https://commits.webkit.org/214056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248008 268f45cc-cd09-0410-ab3c-d52691b4dbfc